--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "private": true,
   "main": "index.js",
   "scripts": {
+    "dev": "npm run development",
     "development": "webpack --mode=development --config webpack.config.js",
+    "prod": "npm run production",
     "production": "webpack --mode=production --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mass.js": "^1.1.3"
+    "mass.js": "^1.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^9.7.0",
