--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "npm run development",
     "development": "webpack --mode=development --config webpack.config.js",
+    "lint": "eslint --config ./.eslintrc.js ./src/app.js",
     "prod": "npm run production",
     "production": "webpack --mode=production --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,12 +18,18 @@
     "mass.js": "^1.2.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
     "autoprefixer": "^9.7.4",
+    "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
     "postcss-loader": "^3.0.0",
     "sass": "^1.26.2",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "terser-webpack-plugin": "^2.3.5",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   }
