--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@babel/preset-env": "^7.8.7",
     "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
-    "babel-polyfill": "^6.26.0",
+    "core-js": "^3.6.4",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "postcss-loader": "^3.0.0",
+    "regenerator-runtime": "^0.13.3",
     "sass": "^1.26.2",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
