--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mass.js-demo",
   "version": "1.0.0",
-  "description": "",
+  "description": "Demonstration website for Mass.js",
   "private": true,
   "scripts": {
     "dev": "npm run development",
@@ -11,8 +11,8 @@
     "production": "webpack --mode=production --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "MeekLogic (Tyler Vigario)",
+  "license": "GPL-3.0-only",
   "dependencies": {
     "mass.js": "^1.2.4"
   },
