--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,16 @@
 {
   "env": {
-    "browser": true,
     "es6": true,
     "es2017": true,
+    "es2020": true,
     "node": true
   },
   "extends": [
+    "eslint:recommended",
+    "plugin:ava/recommended",
+    "plugin:node/recommended-module",
+    "plugin:import/errors",
+    "plugin:import/warnings",
     "google"
   ],
   "globals": {
@@ -13,10 +18,10 @@
     "SharedArrayBuffer": "readonly"
   },
   "parserOptions": {
-    "ecmaVersion": 2019,
+    "ecmaVersion": 2020,
     "sourceType": "module"
   },
   "rules": {
-    "max-len": 1
+    "max-len": "warn"
   }
 }
