--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "mass.js": "^1.3.3"
   },
+  "engines": {
+    "node": ">=12"
+  },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
@@ -29,6 +32,8 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-ava": "^10.2.0",
     "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jquery": "^1.5.1",
+    "eslint-plugin-jsdoc": "^22.1.0",
     "eslint-plugin-node": "^11.1.0",
     "html-minifier": "^4.0.0",
     "html-minifier-lint": "^2.0.0",
