--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "mass.js": "^1.3.3"
+    "mass.js": "github:TylerVigario/Mass.js"
   },
   "engines": {
     "node": ">=12"
