--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,8 @@
     "node",
     "import",
     "jsdoc",
-    "jquery"
+    "jquery",
+    "security"
   ],
   "extends": [
     "eslint:recommended",
@@ -23,7 +24,8 @@
     "plugin:import/errors",
     "plugin:import/warnings",
     "plugin:jsdoc/recommended",
-    "plugin:jquery/deprecated"
+    "plugin:jquery/deprecated",
+    "plugin:security/recommended"
   ],
   "globals": {
     "Atomics": "readonly",
