--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "mass.js": "github:TylerVigario/Mass.js"
+    "mass.js": "github:TylerVigario/Mass.js#i18n"
   },
   "engines": {
     "node": ">=12"
@@ -30,7 +30,7 @@
     "eslint-plugin-ava": "^10.3.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jquery": "^1.5.1",
-    "eslint-plugin-jsdoc": "^24.0.0",
+    "eslint-plugin-jsdoc": "^24.0.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-security": "^1.4.0",
     "html-minifier": "^4.0.0",
