--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "npm run lint:html && npm run lint:js",
     "lint:html": "html-minifier-lint ./src/index.html",
     "lint:js": "eslint --config .eslintrc.json src/ --ext .mjs",
+    "lint:js:fix": "npm run lint:js -- --fix",
     "prod": "npm run production",
     "production": "npm run production:html && npm run production:js",
     "production:html": "html-minifier --config-file ./html-minifier.conf --output ./dist/index.html ./src/index.html",
@@ -36,7 +37,7 @@
     "eslint-plugin-ava": "^10.3.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jquery": "^1.5.1",
-    "eslint-plugin-jsdoc": "^25.0.1",
+    "eslint-plugin-jsdoc": "^25.4.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-security": "^1.4.0",
     "html-minifier": "^4.0.0",
