--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "development:js": "webpack --mode=development --config webpack.config.cjs --progress",
     "lint": "npm run lint:html && npm run lint:js",
     "lint:html": "html-minifier-lint ./src/index.html",
-    "lint:js": "eslint --config .eslintrc.json src/ --ext .mjs",
-    "lint:js:fix": "npm run lint:js -- --fix",
+    "lint:js": "eslint --config .eslintrc.json --ext .mjs src/",
     "prod": "npm run production",
     "production": "npm run production:html && npm run production:js",
     "production:html": "html-minifier --config-file ./html-minifier.conf --output ./dist/index.html ./src/index.html",
@@ -32,12 +31,12 @@
     "@babel/preset-env": "^7.9.6",
     "babel-loader": "^8.1.0",
     "core-js": "^3.6.5",
-    "eslint": "^7.0.0",
+    "eslint": "^7.1.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-ava": "^10.3.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jquery": "^1.5.1",
-    "eslint-plugin-jsdoc": "^25.4.1",
+    "eslint-plugin-jsdoc": "^25.4.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-security": "^1.4.0",
     "html-minifier": "^4.0.0",
