--- a/.gitattributes
+++ b/.gitattributes
@@ -2,9 +2,10 @@
 * text=auto
 
 # Force line endings for these files
-*.js  text eol=lf
-*.cjs text eol=lf
-*.mjs text eol=lf
+*.js               text eol=lf
+*.cjs              text eol=lf
+*.mjs              text eol=lf
+package-lock.json  text eol=lf
 
 # Don't add these files to git archives
 CHANGELOG.md export-ignore
