--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
     "es6": true,
     "es2017": true,
     "es2020": true,
+    "es2021": true,
     "jquery": true,
     "node": true
   },
@@ -18,7 +19,6 @@
   ],
   "extends": [
     "eslint:recommended",
-    "google",
     "plugin:ava/recommended",
     "plugin:node/recommended-module",
     "plugin:import/errors",
@@ -28,18 +28,27 @@
     "plugin:security/recommended"
   ],
   "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly",
     "CodeMirror": "readonly",
     "_paq": "readonly"
   },
   "parserOptions": {
-    "ecmaVersion": 2020,
+    "ecmaVersion": 2021,
     "sourceType": "module"
   },
   "rules": {
-    "max-len": "warn",
-    "valid-jsdoc": "off",
-    "require-jsdoc": "off"
+    "max-len": ["warn", {
+      "code": 120
+    }],
+    "linebreak-style": "off",
+    "jsdoc/require-jsdoc": "off",
+    "import/unambiguous": "error",
+    "import/no-commonjs": "error",
+    "import/no-amd": "error",
+    "import/no-nodejs-modules": "error",
+    "import/no-deprecated": "error",
+    "import/extensions": ["error", "always"],
+    "import/no-unresolved": ["error", {
+      "commonjs": true
+    }]
   }
 }
