--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,18 @@
 {
   "env": {
     "browser": true,
-    "commonjs": true,
     "es6": true,
     "es2017": true,
     "es2020": true,
     "es2021": true,
-    "jquery": true,
-    "node": true
+    "jquery": true
   },
   "plugins": [
     "ava",
     "node",
     "import",
     "jsdoc",
-    "jquery",
-    "security"
+    "jquery"
   ],
   "extends": [
     "eslint:recommended",
@@ -24,9 +21,11 @@
     "plugin:import/errors",
     "plugin:import/warnings",
     "plugin:jsdoc/recommended",
-    "plugin:jquery/deprecated",
-    "plugin:security/recommended"
+    "plugin:jquery/deprecated"
   ],
+  "overrides": [{
+    "files": ["*.js", "*.mjs"]
+  }],
   "globals": {
     "CodeMirror": "readonly",
     "_paq": "readonly"
@@ -46,9 +45,6 @@
     "import/no-amd": "error",
     "import/no-nodejs-modules": "error",
     "import/no-deprecated": "error",
-    "import/extensions": ["error", "always"],
-    "import/no-unresolved": ["error", {
-      "commonjs": true
-    }]
+    "import/extensions": ["error", "always"]
   }
 }
