--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "development:js": "webpack --mode=development --config webpack.config.cjs --progress",
     "lint": "npm run lint:html && npm run lint:js",
     "lint:html": "html-minifier-lint ./src/index.html",
-    "lint:js": "eslint --config .eslintrc.json --ext .mjs src/",
+    "lint:js": "eslint --config .eslintrc.json src/",
     "prod": "npm run production",
     "production": "npm run production:html && npm run production:js",
     "production:html": "html-minifier --config-file ./html-minifier.conf --output ./dist/index.html ./src/index.html",
@@ -37,7 +37,6 @@
     "eslint-plugin-jquery": "^1.5.1",
     "eslint-plugin-jsdoc": "^30.7.6",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-security": "^1.4.0",
     "html-minifier": "^4.0.0",
     "html-minifier-lint": "^2.0.0",
     "regenerator-runtime": "^0.13.7",
