--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "node": ">=12"
   },
   "dependencies": {
-    "mass.js": "github:TylerVigario/Mass.js#i18n"
+    "mass.js": "github:TylerVigario/Mass.js"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
